# MusicServices

DeezerService/: Cargo.toml
DeezerService/src/: deezer.rs  deezer_domain.rs  deezer_public.rs  main.rs  postgres_service.rs  private_api_routs.rs  redis_service.rs  s3_client.rs
PlaylistsService/: Cargo.toml
PlaylistsService/src/: main.rs
SoundcloudService/: Cargo.toml
SoundcloudService/src/: main.rs  postgres_service.rs  routs.rs  s3_client.rs  soundcloud_api.rs
postgreSQL/: docker-compose.yml
postgreSQL/db/init/: seed.sql
