[package]
name = "DeezerService"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json", "stream", "cookies"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
redis = { version =  "0.32.0", features = ["aio", "tokio-comp"]  }
regex = "1.11.1"
serde_json = "1.0.140"
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
blowfish = { version = "0.9.1", features = ["bcrypt"] }
thiserror = "2.0.12"
url = "2.5.4"
#log = "0.4.27"
bytes = "1.10.1"
futures = "0.3.31"
async-stream = "0.3.6"
md5 = "*"
cbc = "0.1.2"
tokio-stream = "0.1.17"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres" ] }
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "*"
aws-smithy-types = { version = "*", features = ["rt-tokio"] }
tokio-util = "0.7.15"
axum-core = "0.5.2"